# Matematica-Discreta

discreta2021/: CMakeLists.txt  CMakeSettings.json  GrafoSt21.c  GrafoSt21.h  RomaVictor.h  bipartito.c  bipartito.h  bitarray.c  bitarray.h  greedy.c  greedy.h  greedyrapido.c  greedyrapido.h  hashtable.c  hashtable.h  hashtable_b.c  hashtable_b.h  listaenlazada.c  listaenlazada.h  main-paralelo.c  main-rv.c  main.c  makefile  notas.leer  orden.c  orden.h  read_dimacs.c  read_dimacs.h  reorden.c  reorden.h  tests.c  u32.h  vertice.c  vertice.h  workspace.code-workspace
